--- a/passion.html
+++ b/passion.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
     <section id="passion">
         <div class="kolom">
-            <p class="deskripsi">Have Something that I Like?</p>
+            <p class="deskripsi">Have Anything that I Like?</p>
             <h2>Yes, i have few thing i love to do</h2>
             <p>Actually I love to do everything such as do many kind of sports and acknowledge something new.
                 But there are two thing that i love the most. Those are playing video games and travelling anywhere. My first video game i played is Counter Strike. 
